# flowreg-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/flowreg_hooks/: __init__.py  check_readme_images.py
tests/: test_check_readme_images.py
